Test/errors/err_lock_wrong_mutex.cb
// Accessing a guarded field while holding the WRONG lock.

import "mutex.cb";

struct Account {
    mutex mtxA = default;
    mutex mtxB = default;
    lock(mtxA) {
        int balance = default;
    }
};

expect_error("Field 'balance' is guarded by 'mtxA'") {
    void test() {
        Account a;
        lock(a.mtxB) {
            int v = a.balance;
        }
    }
}

// lock() on a type that declares no [Capability(...)] - the receiver is not a lock type,
// even though it duck-types the acquire/release method names.
struct NotALock {
    int state = 0;
    void acquire() { state = 1; }
    void release() { state = 0; }
};

expect_error("is not a lock type") {
    void testNoCapability() {
        NotALock n;
        lock(n) {
            n.state = 2;
        }
    }
}

// A [Capability(ILockable)] type must supply the full interface shape; release() is missing.
expect_error("does not implement 'ILockable::release'") {
    [Capability(ILockable)]
    struct HalfLock {
        int held = 0;
        void acquire() { held = 1; }
    };
}
